Use Set that allows null elements